<resources>
    <string name="app_name">Dungeon Map Generator</string>
    <string name="generate_button_text">Generate Dungeon</string>
    <string name="export_button_text">Export HTML</string>
    <string name="save_button_text">Save Dungeon</string>
    <string name="load_button_text">Load Dungeon</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="title_activity_about">About This Generator</string>
    <string name="about">About</string>
    <string name="delete_all_button_text">Delete all</string>
    <string name="delete_confirmation_text">Are you sure?</string>
    <string name="delete_confirmation_single_text">Do you want to delete this dungeon?</string>
    <string name="all_deleted">All saved dungeons deleted</string>
    <string name="selected_deleted">Dungeon deleted</string>
    <string name="loading_text">Loading…</string>
    <string name="editDialogSave">Save</string>
    <string name="editDialogCancel">Cancel</string>
    <string name="editMonsters">Monsters:</string>
    <string name="editTreasures">Treasures:</string>
    <string name="ok_button_text">OK</string>
    <string name="inverse_text">Inverse</string>
    <string name="edit_monster_hint">Add monster</string>
    <string name="edit_treasure_hint">Add treasure</string>
    <string name="edit_trap_hint">Add trap</string>
    <string-array name="loading_screen_gen_array">
        <item>Generating…</item>
        <item>Work, work, work…</item>
        <item>During the construction of your dungeon 3 dwarfs lost their job on account of automation…</item>
        <item>No goblins were harmed during the making of this dungeon…</item>
    </string-array>
    <string name="about_content">
        This generator based on D&amp;D5th Edition SRD (released under OGL 1.0a license)\n
        You can find the source code at GitHub: \n https://github.com/externius/DungeonMap\n\n
        There is a Web version here: \n https://dungeonmap.info/\n\n
        Please feel free to contact me if you have any recommendation at t.andras@outlook.com.
    </string>
    <string name="title_activity_settings">Generated Dungeon</string>
    <string name="monster_type">Monster type: </string>
    <string-array name="monster_type_array">
        <item>Aberration</item>
        <item>Beast</item>
        <item>Celestial</item>
        <item>Construct</item>
        <item>Dragon</item>
        <item>Elemental</item>
        <item>Fey</item>
        <item>Fiend</item>
        <item>Giant</item>
        <item>Humanoid</item>
        <item>Monstrosity</item>
        <item>Ooze</item>
        <item>Plant</item>
        <item>Swarm of tiny beasts</item>
        <item>Undead</item>
    </string-array>
    <string name="dungeon_difficulty"> Dungeon difficulty: </string>
    <string-array name="dungeon_difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Deadly</item>
    </string-array>
    <string name="party_level"> Party level: </string>
    <string-array name="party_level_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="party_size"> Party size: </string>
    <string-array name="party_size_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="dungeon_size"> Dungeon size: </string>
    <string-array name="dungeon_size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="room_density"> Room density: </string>
    <string-array name="room_density_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="room_size"> Room size: </string>
    <string-array name="room_size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="traps"> Traps: </string>
    <string-array name="traps_array">
        <item>None</item>
        <item>Few</item>
        <item>More</item>
    </string-array>
    <string name="roaming_monsters">Roaming monsters:</string>
    <string-array name="roaming_monsters_array">
        <item>None</item>
        <item>Few</item>
        <item>More</item>
    </string-array>
    <string name="dead_ends"> Dead ends: </string>
    <string-array name="dead_ends_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="corridors"> Corridors: </string>
    <string-array name="corridors_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="items_rarity"> Items max rarity: </string>
    <string-array name="items_rarity_array">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Very Rare</item>
        <item>Legendary</item>
    </string-array>
    <string name="treasure_value"> Treasure value: </string>
    <string-array name="treasure_value_array">
        <item>Low</item>
        <item>Standard</item>
        <item>High</item>
    </string-array>
    <string name="theme_value"> Theme: </string>
    <string-array name="theme_value_array">
        <item>Dark</item>
        <item>Light</item>
        <item>Minimal</item>
    </string-array>
</resources>
